# pasture

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
pasture-algorithms/: Cargo.toml
pasture-algorithms/benches/: convexhull_bench.rs
pasture-algorithms/examples/: downsampling_example.rs  normal_estimation_example.rs  reprojection_example.rs  segmentation_example.rs
pasture-algorithms/src/: bounds.rs  convexhull.rs  lib.rs  minmax.rs  normal_estimation.rs  reprojection.rs  segmentation.rs  structure_measures.rs  voxel_grid.rs
pasture-algorithms/src/acceleration_structures/: README.md  gpu_octree.rs
pasture-algorithms/src/acceleration_structures/shaders/: generate_nodes.comp
pasture-core/: Cargo.toml
pasture-core/benches/: aabb_bench.rs  buffer_filter_bench.rs  layout_conversion_bench.rs  point_buffer_iterators_bench.rs  point_layout_bench.rs
pasture-core/doc/: point_buffers.dot
pasture-core/examples/: basic_point_buffers.rs  buffer_slices.rs  custom_point_type.rs  device.comp  device_compute.rs  device_compute2.rs  dynamic_point_buffers.rs  gpu_interleaved.rs  gpu_per_attribute.rs  layout_conversion.rs  point_buffer_traits_explained.rs  point_buffer_v2.rs  point_layout.rs  shader.comp  test_device.rs  test_wgpu.rs
pasture-core/examples/shaders/: device2.comp  per_attribute.comp
pasture-core/src/: lib.rs  test_utils.rs
pasture-core/src/containers/: attribute_iterators.rs  attribute_range.rs  buffer_storage.rs  buffer_views.rs  iterators.rs  mod.rs  point_buffer.rs  point_iterators.rs  point_view.rs  raw_attribute_view.rs  slice.rs  slice_buffers.rs  untyped_point.rs  vec_buffers.rs  views.rs
pasture-core/src/containers/buffers/: borrowed_buffers.rs  hashmap_buffer.rs  matrix_buffer.rs  mod.rs  traits.rs  vector_buffer.rs
pasture-core/src/containers_v2/: buffer_storage.rs  iterators.rs  mod.rs  point_buffer_v2.rs  views.rs
pasture-core/src/gpu/: device.rs  gpu_point_buffer.rs  mod.rs
pasture-core/src/layout/: conversion.rs  mod.rs  point_layout.rs  point_type.rs
pasture-core/src/layout/conversion/: attribute_conversion.rs  buffer_conversion.rs  mod.rs
pasture-core/src/math/: arithmetic.rs  bitmanip.rs  bounds.rs  minmax.rs  mod.rs  morton_index.rs
pasture-core/src/meta/: metadata.rs  mod.rs
pasture-core/src/util/: memory.rs  mod.rs
pasture-derive/: Cargo.toml
pasture-derive/src/: layout.rs  lib.rs
pasture-io/: Cargo.toml
pasture-io/benches/: las_bench.rs
pasture-io/examples/: fast_las_parsing.rs  gen_test_data.rs  gpu_io_interleaved.rs  gpu_io_per_attribute.rs  las_io.rs  las_io_experiments.rs  pointcloud_streaming.rs  simple_filtering.rs  simple_io.rs  write_3dtiles.rs
pasture-io/examples/shaders/: io_interleaved.comp  io_interleaved.wgsl  io_per_attribute.comp
pasture-io/resources/test/: 10_points_ascii.txt  10_points_ascii_all_attributes.txt  10_points_ascii_parsing_errors.txt  10_points_format_0.las  10_points_format_0.laz  10_points_format_1.las  10_points_format_1.laz  10_points_format_10.las  10_points_format_10.laz  10_points_format_2.las  10_points_format_2.laz  10_points_format_3.las  10_points_format_3.laz  10_points_format_4.las  10_points_format_4.laz  10_points_format_5.las  10_points_format_5.laz  10_points_format_6.las  10_points_format_6.laz  10_points_format_7.las  10_points_format_7.laz  10_points_format_8.las  10_points_format_8.laz  10_points_format_9.las  10_points_format_9.laz  10_points_with_extra_bytes_format_0.las  10_points_with_extra_bytes_format_1.las  10_points_with_extra_bytes_format_10.las  10_points_with_extra_bytes_format_2.las  10_points_with_extra_bytes_format_3.las  10_points_with_extra_bytes_format_4.las  10_points_with_extra_bytes_format_5.las  10_points_with_extra_bytes_format_6.las  10_points_with_extra_bytes_format_7.las  10_points_with_extra_bytes_format_8.las  10_points_with_extra_bytes_format_9.las  tileset.json
pasture-io/src/: lib.rs
pasture-io/src/ascii/: ascii_format_util.rs  ascii_metadata.rs  ascii_reader.rs  ascii_writer.rs  mod.rs  raw_reader.rs  raw_writer.rs  test_util.rs
pasture-io/src/base/: io_factory.rs  mod.rs  pipeline.rs  pointcloud.rs  reader.rs  seek.rs  writer.rs
pasture-io/src/las/: las_err.rs  las_layout.rs  las_metadata.rs  las_reader.rs  las_types.rs  las_writer.rs  mod.rs  parsing.rs  raw_readers.rs  raw_writers.rs  read_helpers.rs  test_util.rs  write_helpers.rs
pasture-io/src/tiles3d/: batch_table.rs  common.rs  feature_table.rs  mod.rs  pnts_metadata.rs  pnts_reader.rs  pnts_types.rs  pnts_writer.rs  tileset.rs
pasture-io/tests/: las_io.rs
pasture-io/tests/common/: mod.rs
pasture-tools/: Cargo.toml  build.rs
pasture-tools/src/: lib.rs  main.rs
pasture-tools/src/acceleration_structures/: gpu_octree.rs  mod.rs
pasture-tools/src/acceleration_structures/shaders/: comp.spv  find_max_values.comp  generate_nodes.comp
