[package]
name = "pasture-core"
version = "0.3.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "A framework for working with point cloud data"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
pasture-derive = {version = "=0.2.0", path = "../pasture-derive" }
nalgebra = {version = "0.23.1", features = ["serde-serialize"] }
anyhow = "1.0.34"
float-ord = "0.2.0"
static_assertions = "1.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.119", features = ["derive"] }
rayon = "1.5.0"
itertools = "0.10.0"
byteorder = "1.4.2"

# GPU related
wgpu = { version = "0.12.0", features = ["spirv"], optional = true }
shaderc = { version = "0.7.2", optional = true }
futures = { version = "0.3", optional = true }
bytemuck = { version = "1.5.1", optional = true }

[dev-dependencies]
rand = "0.8.2"
criterion = "0.3"

[[bench]]
name = "point_buffer_iterators_bench"
harness = false

[features]
gpu = ["wgpu", "shaderc", "futures", "bytemuck"]
