[package]
name = "pasture-core"
version = "0.3.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "A framework for working with point cloud data"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
pasture-derive = {version = "=0.2.0", path = "../pasture-derive" }
nalgebra = {version = "0.31", features = ["serde-serialize"] }
anyhow = "1.0"
float-ord = "0.2.0"
static_assertions = "1.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
itertools = "0.10.0"
byteorder = "1.4"

# GPU related
wgpu = { version = "0.12.0", features = ["spirv"], optional = true }
futures = { version = "0.3", optional = true }
bytemuck = { version = "1.5", optional = true }
shaderc = { version = "0.7.2", optional = true }

[dev-dependencies]
rand = "0.8.2"
criterion = "0.3"

[[bench]]
name = "point_buffer_iterators_bench"
harness = false

[features]
gpu = ["wgpu", "futures", "bytemuck"] 
core_gpu_examples = ["gpu", "shaderc"]
