[package]
name = "pasture-derive"
version = "0.1.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.8"
anyhow = "1.0.34"

[lib]
proc-macro = true