[package]
name = "pasture-io"
version = "0.1.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasture-core = { path = "../pasture-core" }
pasture-derive = {path = "../pasture-derive"}
anyhow = "1.0.34"
las = { version = "0.7.3", features = ["laz"] }
laz = "0.5.2"
static_assertions = "1.1.0"
scopeguard = "1.1.0"
byteorder = "1.4.2"
float-ord = "0.2.0"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.3" }

[[bench]]
name = "las_bench"
harness = false