[package]
name = "pasture-io"
version = "0.1.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "Support for reading and writing point cloud files with pasture"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasture-core = {version = "=0.1.0", path = "../pasture-core" }
pasture-derive = {version = "=0.1.0", path = "../pasture-derive"}
anyhow = "1.0.34"
las = { version = "0.7.3", features = ["laz"] }
laz = "0.5.2"
static_assertions = "1.1.0"
scopeguard = "1.1.0"
byteorder = "1.4.2"
float-ord = "0.2.0"
chrono = "0.4"
serde = {version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
itertools = "0.10.0"

# Used by the examples
crevice = { version = "0.7.1", optional = true }
mint = { version = "0.5.6", optional = true }
log = { version = "0.4.0", optional = true }
env_logger = { version = "0.9.0", optional = true }
futures = { version = "0.3", optional=true }
bytemuck = { version = "1.5.1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.3" }

[[bench]]
name = "las_bench"
harness = false

[features]
io_gpu_example = ["pasture-core/gpu", "crevice", "mint", "log", "env_logger", "futures", "bytemuck"]