[package]
name = "pasture-io"
version = "0.4.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "Support for reading and writing point cloud files with pasture"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasture-core = {version = "=0.4.0", path = "../pasture-core" }
pasture-derive = {version = "=0.4.0", path = "../pasture-derive"}
anyhow = "1.0.34"
las = { version = "0.8", features = ["laz"] }
laz = "0.8"
static_assertions = "1.1.0"
scopeguard = "1.1.0"
byteorder = "1.4.2"
float-ord = "0.2.0"
chrono = "0.4"
serde = {version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
itertools = "0.10.0"
bytemuck = {version = "1.13", features = ["derive"] }
array-init = "2.1"
bitfield = "0.14"
num-traits = "0.2.16"
memmap2 = "0.7.1"
lazy_static = "1.4.0"
walkdir = "2.4.0"
gat-lending-iterator = "0.1.1"

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.3" }

[[bench]]
name = "las_bench"
harness = false
