[package]
name = "pasture-tools"
version = "0.3.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "Command line utilities for working with point cloud files"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures", "command-line-utilities"]
readme = "README.md"

[dependencies]
pasture-core = {version = "=0.3.0", path = "../pasture-core" }
pasture-io = {version = "=0.3.0", path = "../pasture-io" }
pasture-algorithms = {version = "=0.3.0", path = "../pasture-algorithms" }
pasture-derive = {version = "=0.2.0", path = "../pasture-derive" }
anyhow = "1.0.34"
clap = "2.33.3"
log = "0.4"
pretty_env_logger = "0.4.0"
plotters = "^0.3.0"
rand = {version = "0.8.3", features = ["small_rng"] }

# GPU related
winit = "0.26"
wgpu = {version = "0.12.0", features = ["spirv", "webgl"]}
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"
nalgebra = {version = "0.23.1", features = ["serde-serialize", "mint"] }
crevice = "0.7.1"
mint = "0.5.6"
bytemuck = "1.5.1"

[build-dependencies]
shaderc = "0.7.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.76" # remember to change version in wiki as well
web-sys = { version = "0.3.53", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Window",
]}
js-sys = "0.3.50"
wasm-bindgen-futures = "0.4.23"
# enable parking_lot's wasm-bindgen feature so that it, in turn, enables that of crate `instant`
# parking_lot = { version = "0.11", features = ["wasm-bindgen"] }

[[bin]]
name = "reorder_laz_chunks"

[[bin]]
name = "plotting"

[[bin]]
name = "info"
