[package]
name = "pasture-tools"
version = "0.5.0"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
edition = "2018"
license-file = "LICENSE"
description = "Command line utilities for working with point cloud files"
homepage = "https://github.com/Mortano/pasture"
repository = "https://github.com/Mortano/pasture"
keywords = ["pasture", "pointcloud", "points", "lidar"]
categories = ["data-structures", "command-line-utilities"]
readme = "README.md"

[dependencies]
pasture-core = {version = "=0.5.0", path = "../pasture-core" }
pasture-io = {version = "=0.5.0", path = "../pasture-io" }
pasture-algorithms = {version = "=0.5.0", path = "../pasture-algorithms" }
pasture-derive = {version = "=0.5.0", path = "../pasture-derive" }
anyhow = "1.0.34"
clap = "2.33.3"
log = "0.4"
pretty_env_logger = "0.4.0"
plotters = "^0.3.0"
rand = {version = "0.8.3", features = ["small_rng"] }
morton-index = "0.2"

[[bin]]
name = "info"
